<resources>
    <string name="app_name">Fever Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="reports_fragment_label">Reports Fragment</string>
    <string name="New">Enter New Temperature</string>
    <string name="records">Go To Records</string>
    <string name="next">Next</string>
    <string name="back">Back To Main</string>

    <string name="hello_first_fragment">This application will allow you to input your temperature as well as the date and time of recording so that you can better share with your doctor a record of your fevers.</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="temp">Temperature: </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>

</resources>
