<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="edu.quinnipiac.ser210.fevertracker.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_main_menu">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_reportsFragment"
            app:destination="@id/reportsFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="edu.quinnipiac.ser210.fevertracker.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_form">

        <action
            android:id="@+id/action_SecondFragment_to_reportsFragment"
            app:destination="@id/reportsFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_warning"
            app:destination="@id/warning" />
    </fragment>
    <fragment
        android:id="@+id/reportsFragment"
        android:name="edu.quinnipiac.ser210.fevertracker.ReportsFragment"
        android:label="@string/reports_fragment_label"
        tools:layout="@layout/fragment_reports">

        <action
            android:id="@+id/action_reportsFragment_to_firstFragment"
            app:destination="@id/FirstFragment"/>
        <action
            android:id="@+id/action_reportsFragment_to_secondFragment"
            app:destination="@id/SecondFragment"/>
    </fragment>
    <fragment
        android:id="@+id/warning"
        android:name="edu.quinnipiac.ser210.fevertracker.Warning"
        android:label="fragment_warning"
        tools:layout="@layout/fragment_warning" />
</navigation>
